Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16164

QList documentation contains a reference to not existing QStringList::find() function

    XMLWordPrintable

Details

    • 1575462

    Description

      Here:
      http://doc.trolltech.com/latest/qlist.html#find

      you can find following text:
      "Qt includes a QStringList class that inherits QList<QString> and adds a few convenience functions, such as QStringList::join() and QStringList::find(). (QString::split() creates QStringLists from strings.)"

      But, there is no such method as QStringList::find().

      Please, remove the text or update it to be correct.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            cvandonderen Casper van Donderen
            almalino Alexei Malinovski
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes