QList document referenced to non existing function

QList documentation introduces a QStringList-class and states that it has function: QStringList::find. Function does not exist.
Changed so that the mention of the QStringList::find-function is removed from the documentation.

Task-number: QTBUG-16164

Merge-request: 2698
Reviewed-by: Casper van Donderen <casper.vandonderen@nokia.com>